<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BodyTrack</string>
	<!-- Main activity values -->
    <string name="title">BODYTRACK!</string>
    <string name="gpsButton">GPS Tracking</string>    
    <string name="barcodeButton">Scan food barcode</string>  
    <string name="barcodeFail">ZXing barcode scanner not installed. Please install!</string>    
    <string name="pixButton">Take meal picture</string>    
    
    <!-- GPS Service control activity values -->
    <string name="gpsTitle">Stop GPS Tracking</string>        
    <string name="gpsSvcStartButton">Start GPS Tracking</string>    
    <string name="gpsSvcStopButton">Stop GPS Tracking</string>
    <string name="showData">Show data</string>
    <string name="dumpData">Send data to web</string>    
   
   <!--  GPS Service values -->
   <string name="svcRunning">BodyTrack is logging data.</string>
   <string name="svcTitle">BodyTrack Service</string>
   
   <!--  Acceleerometer Service values -->
   <string name="accSvcRunning">BodyTrack Accelerometer tracker running</string>
   <string name="accSvcTitle">BodyTrack Accelerometer Service</string>
   
    <!-- Camera values -->
  	<string name="tookPic">Picture stored</string>
  	<string name="takePic">Take a new photo</string>
  	<string name="photoInfo">This will be where photos/notes can be reviewed</string>
  	
  	<!--  Barcode values -->
  	<string name="getBarcode">Scan a new barcode</string>
  	<string name="barcodeInfo">You will be able to review barcodes here</string>
  	
  	<!-- Menu values --> 
  	<string name="prefs">Preferences</string>
  	<string name="upload_data">Upload data</string>
  	
  	<!-- Settings values -->
  	<string name="netPrefs">Network Preferences</string>
  	<string name="gpsPrefs">GPS Preferences</string>
  	<string name="title_user_id">User ID</string>
  	<string name="sumary_user_id">The user ID to use when uploading.</string>
  	<string name="dialog_title_user_id">User ID</string>
  	<string name="default_user_id">17</string>
  	
  	<string name="title_gps_provider">Location Provider</string>
  	<string name="failedToSavePic">Failed to store the picture!</string>
  	<string name="picture_delete">Delete</string>
  	<string name="picture_upload">Upload</string>
  	<string name="picture_pending_upload">Pending Upload</string><string name="picture_already_uploaded">Already Uploaded</string>
  	<string name="upload_all_pics">Upload All</string>
  	<string name="upload_complete">Uploads Complete</string>
  	<string name="no_images_to_upload">No images to upload.</string>
  	<string name="delete_uploaded_pics">Delete All Uploaded</string>
  	<string name="pref_config">Preferences</string>
  	<string name="pref_need_config">Preferences need configuration before you begin.</string>
  	<string name="pref_invalid">One or more of your preferences are invalid. Please reconfigure them.</string>
  	<string name="device_prefs">Device Preferences</string>
  	<string name="title_user_name">Username</string>
  	<string name="sumary_user_name">bodytrack.org username</string>
  	<string name="dialog_title_user_name">Username</string>
  	<string name="title_password">Password</string>
  	<string name="sumary_password">bodytrack.org password</string>
  	<string name="dialog_title_password">Password</string>
  	<string name="no_zxing">The zxing barcode scanner app is required to be able to scan barcodes.</string>
  	<string name="no_zxing_title">Additional App Required</string>
  	<string name="photo_prefs">Photo Preferences</string>
  	<string name="title_photo_autodelete">Photo Autodelete</string>
  	<string name="sumary_photo_autodelete">Delete photos once uploaded</string>
  	<string name="title_network_toggle">Network Enabled</string>
  	<string name="sumary_network_toggle">Enable uploading of data</string>
  	<string name="network_disabled">Network Disabled</string>
  	<string name="title_photo_autoupload">Photo Autoupload</string>
  	<string name="sumary_photo_autoupload">Automatically upload photos after being taken.</string>
  	<string name="dump_gps">Dump Data to CSV</string>
  	<string name="start_acc">Accelerometer Tracking</string>
  	<string name="stop_acc">Stop Accelerometer Tracking</string>
  	<string name="dump_acc">Dump data to CSV</string>
  	<string name="upload_photos_bg_title">Upload in Background</string>
  	<string name="sumary_upload_photos_bg">"Don't freeze up the UI while photos are being uploaded"</string>
  	<string name="title_device_nickname">Nickname</string>
  	<string name="sumary_device_nickname">Nickname that will be associated with data from this phone.</string>
  	<string name="startGyro">Gyroscope Tracking</string><string name="stopGyro">Stop Gyroscope Tracking</string>
  	<string name="startWifi">Wifi Tracking</string>
  	<string name="stopWifi">Stop Wifi Tracking</string>
  	<string name="startTemp">Temperature Tracking</string>
  	<string name="stopTemp">Stop Temperature Tracking</string>
  	<string name="startLight">IlluminanceTracking</string>
  	<string name="stopLight">Stop IlluminanceTracking</string>
  	<string name="startOrnt">Orientation Tracking</string>
  	<string name="startPress">Barometric Pressure Tracking</string>
  	<string name="stopOrnt">Stop Orientation Tracking</string>
  	<string name="startGPS">GPS Tracking</string>
  	<string name="stopGPS">Stop GPS Tracking</string>
  	<string name="console">Console (last 10KB):</string>
  	<string name="Frequency">GPS Update Rate: </string>
  	<string name="blank">     </string>
  	<string name="scrollStart">^</string>
  	<string name="scrollEnd">V</string>
  	<string name="refreshStats">Refresh</string>
  	<string name="network_force_disabled">Could not authenticate with server. Networking has been disabled. Please check username, password, and network connectivity before reenabling network use.</string>
  	<string name="stats">Stats</string>
  	<string name="enableAll">Enable All</string>
  	<string name="disableAll">Disable All</string>
  	<string name="genericTimeRemaining">0 s of backlog</string>
  	<string name="rateNoChange">remaining constant</string>
  	<string name="onlyUseWifi">Use WiFi Only</string>
  	<string name="onlyUseWifiSumary">Only upload data when connected to a wifi network.</string>
  	<string name="powerPrefs">Power Options</string>
  	<string name="turnOffTracking">Disable Tracking on Low Battery</string>
  	<string name="turnOffTrackingSummary">Turns off all tracking if the battery gets low.</string>
  	<string name="turnOffUploading">Disable Uploading on Low Battery</string>
  	<string name="turnOffUploadingSummary">Disables all uploading when the battery becomes low.</string>
  	<string name="uploadOnlyOnExternalPower">Upload Only While Charging</string>
  	<string name="uploadOnlyOnExternalPowerSummary">Only upload data to the server when an external power source is present.</string>
  	<string name="uploadOnlyOnAC">Upload only on AC power</string>
  	<string name="uploadOnlyOnACSummary">Only upload when connected to AC power (a wall outlet).</string>
  	<string name="logComment">Log a Comment</string>
  	<string name="photoPrefs">Photo Preferences</string>
  	<string name="noCommentsOnPhotos">No Comments</string>
  	<string name="noCommentsOnPhotosSummary">Never prompt me for comments for photos.</string>
  	<string name="serverHost">Server Host</string>
  	<string name="serverHostSummary">Hostname of the server to upload to</string>
  	<string name="serverPort">Server Port</string>
  	<string name="serverPortSummary">Server Port</string>
  	<string name="splitAcc">Split Gravity From Linear Acceleration</string>
  	<string name="storagePrefs">Storage Preferences</string>
  	<string name="sensorSetting">Sensor Delay: </string>
</resources>
