<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/device_prefs">
		<EditTextPreference android:key="deviceNickName"></EditTextPreference>
	</PreferenceCategory><PreferenceCategory android:title="@string/netPrefs"><EditTextPreference
                android:key="userName" android:title="@string/title_user_name" android:summary="@string/sumary_user_name" android:dialogTitle="@string/dialog_title_user_name"/><EditTextPreference
                android:key="password" android:password="true" android:summary="@string/sumary_password" android:dialogTitle="@string/dialog_title_password" android:title="@string/title_password"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/gpsPrefs">
        <ListPreference 
        	android:key="gps_provider"
        	android:title="@string/title_gps_provider" 
        	android:dialogTitle="@string/title_gps_provider"
        	android:entries="@array/gps_provider"
        	android:entryValues="@array/gps_provider" />
    	
	</PreferenceCategory>
	
</PreferenceScreen>