<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:baselineAligned="true" android:orientation="vertical">
	    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/toggleGPS" android:text="@string/startGPS"></Button>
	    <LinearLayout android:id="@+id/gpsSettingsPane" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
	        <TextView android:id="@+id/freqDisplay" android:text="@string/Frequency" android:layout_height="fill_parent" android:gravity="center_vertical|center_horizontal" android:layout_width="fill_parent" android:layout_weight="3"></TextView>
	        <Spinner android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/GPSRatePicker" android:layout_gravity="center" android:layout_weight="1"></Spinner>
	    </LinearLayout>
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/toggleAcc" android:text="@string/start_acc"></Button>
	    <Button android:id="@+id/toggleGyro" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/startGyro"></Button>
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/startWifi" android:id="@+id/toggleWifi"></Button>
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/startLight" android:id="@+id/toggleLight"></Button>
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/startTemp" android:id="@+id/toggleTemp"></Button>
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/startOrnt" android:id="@+id/toggleOrnt"></Button>
	</LinearLayout>
</ScrollView>