<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/start_acc" android:id="@+id/StartAcc"></Button>
<Button android:text="@string/stop_acc" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/stopAcc"></Button>
<Button android:text="@string/showData" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/dumpAccData"></Button>
<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/dump_acc" android:text="@string/dump_gps"></Button>
<TextView android:layout_width="fill_parent" android:text="TextView" android:layout_height="fill_parent" android:layout_gravity="top" android:id="@+id/accData"></TextView>
</LinearLayout>
