<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <Gallery android:layout_width="fill_parent" android:layout_gravity="top" android:layout_height="fill_parent" android:layout_weight="1" android:id="@+id/reviewGallery"></Gallery>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="wrap_content" android:layout_height="fill_parent"></LinearLayout>
        <Button android:layout_width="fill_parent" android:text="@string/upload_all_pics" android:layout_height="wrap_content" android:id="@+id/upload_all_pics" android:layout_weight="1"></Button>
        <Button android:layout_width="fill_parent" android:text="@string/delete_uploaded_pics" android:layout_height="wrap_content" android:id="@+id/delete_all_uploaded_pics" android:layout_weight="1"></Button>
    </LinearLayout>
	<Button  
		android:id="@+id/takePic"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/takePic" android:layout_weight="0"/>
</LinearLayout>